EPOS/Borland Delphi/Definition Files/Delphi XE3/Definitions.pas


  {Advanced Functions}
    function VCS_ActivateAnalogVelocitySetpoint(KeyHandle: Longint; NodeID: Word; AnalogInputNumber: Smallint; Scaling: Single; Offset: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateAnalogVelocitySetpoint@24';
    function VCS_DeactivateAnalogVelocitySetpoint(KeyHandle: Longint; NodeID: Word; AnalogInputNumber: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DeactivateAnalogVelocitySetpoint@16';
    function VCS_EnableAnalogVelocitySetpoint(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_EnableAnalogVelocitySetpoint@12';
    function VCS_DisableAnalogVelocitySetpoint(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DisableAnalogVelocitySetpoint@12';

{Current Mode}
    function VCS_ActivateCurrentMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateCurrentMode@12';
    function VCS_SetCurrentMust(KeyHandle: Longint; NodeID: Word; CurrentMust: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetCurrentMust@16';
    function VCS_SetCurrentMustEx(KeyHandle: Longint; NodeID: Word; CurrentMust: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetCurrentMustEx@16';
    function VCS_GetCurrentMust(KeyHandle: Longint; NodeID: Word; var pCurrentMust: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetCurrentMust@16';
    function VCS_GetCurrentMustEx(KeyHandle: Longint; NodeID: Word; var pCurrentMust: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetCurrentMustEx@16';

  {Advanced Functions}
    function VCS_ActivateAnalogCurrentSetpoint(KeyHandle: Longint; NodeID: Word; AnalogInputNumber: Smallint; Scaling: Single; Offset: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateAnalogCurrentSetpoint@24';
    function VCS_DeactivateAnalogCurrentSetpoint(KeyHandle: Longint; NodeID: Word; AnalogInputNumber: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DeactivateAnalogCurrentSetpoint@16';
    function VCS_EnableAnalogCurrentSetpoint(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_EnableAnalogCurrentSetpoint@12';
    function VCS_DisableAnalogCurrentSetpoint(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DisableAnalogCurrentSetpoint@12';

{Master Encoder Mode}
    function VCS_ActivateMasterEncoderMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateMasterEncoderMode@12';
    function VCS_SetMasterEncoderParameter(KeyHandle: Longint; NodeID: Word; ScalingNumerator: Smallint; ScalingDenominator: Smallint; Polarity: Byte; MaxVelocity: Longint; MaxAcceleration: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetMasterEncoderParameter@32';
    function VCS_GetMasterEncoderParameter(KeyHandle: Longint; NodeID: Word; var pScalingNumerator: Smallint; var pScalingDenominator: Smallint; var pPolarity: Byte; var pMaxVelocity: Longint; var pMaxAcceleration: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetMasterEncoderParameter@32';

{Step Directio Mode}
    function VCS_ActivateStepDirectionMode(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateStepDirectionMode@12';
    function VCS_SetStepDirectionParameter(KeyHandle: Longint; NodeID: Word; ScalingNumerator: Smallint; ScalingDenominator: Smallint; Polarity: Byte; MaxVelocity: Longint; MaxAcceleration: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetStepDirectionParameter@32';
    function VCS_GetStepDirectionParameter(KeyHandle: Longint; NodeID: Word; var pScalingNumerator: Smallint; var pScalingDenominator: Smallint; var pPolarity: Byte; var pMaxVelocity: Longint; var pMaxAcceleration: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetStepDirectionParameter@32';

{Inputs and Outputs}
  {General}
    function VCS_GetAllDigitalInputs(KeyHandle: Longint; NodeID: Word; var pInputs: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetAllDigitalInputs@16';
    function VCS_GetAllDigitalOutputs(KeyHandle: Longint; NodeID: Word; var pOutputs: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetAllDigitalOutputs@16';
    function VCS_SetAllDigitalOutputs(KeyHandle: Longint; NodeID: Word; Outputs: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetAllDigitalOutputs@16';
    function VCS_GetAnalogInput(KeyHandle: Longint; NodeID: Word; Number: Word; var pAnalog: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetAnalogInput@20';
    function VCS_GetAnalogInputVoltage(KeyHandle: Longint; NodeID: Word; Number: Word; var pVoltageValue: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetAnalogInputVoltage@20';
    function VCS_GetAnalogInputState(KeyHandle: Longint; NodeID: Word; Configuration: Word; var pStateValue: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetAnalogInputState@20';
    function VCS_SetAnalogOutput(KeyHandle: Longint; NodeID: Word; OutputNumber: Smallint; AnalogValue: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetAnalogOutput@20';
    function VCS_SetAnalogOutputVoltage(KeyHandle: Longint; NodeID: Word; OutputNumber: Word; VoltageValue: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetAnalogOutputVoltage@20';
    function VCS_SetAnalogOutputState(KeyHandle: Longint; NodeID: Word; Configuration: Word; StateValue: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetAnalogOutputState@20';

  {Position Compare}
    function VCS_SetPositionCompareParameter(KeyHandle: Longint; NodeID: Word; OperationalMode: Byte; IntervalMode: Byte; DirectionDependency: Byte; IntervalWidth: Smallint; IntervalRepetitions: Smallint; PulseWidth: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetPositionCompareParameter@36';
    function VCS_GetPositionCompareParameter(KeyHandle: Longint; NodeID: Word; var pOperationalMode: Byte; var pIntervalMode: Byte; var pDirectionDependency: Byte; var pIntervalWidth: Smallint; var pIntervalRepetitions: Smallint; var pPulseWidth: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPositionCompareParameter@36';
    function VCS_ActivatePositionCompare(KeyHandle: Longint; NodeID: Word; DigitalOutputNumber: Smallint; Polarity: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivatePositionCompare@20';
    function VCS_DeactivatePositionCompare(KeyHandle: Longint; NodeID: Word; DigitalOutputNumber: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DeactivatePositionCompare@16';
    function VCS_EnablePositionCompare(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_EnablePositionCompare@12';
    function VCS_DisablePositionCompare(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DisablePositionCompare@12';
    function VCS_SetPositionCompareReferencePosition(KeyHandle: Longint; NodeID: Word; ReferencePosition: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetPositionCompareReferencePosition@16';

    {Position Marker}
    function VCS_SetPositionMarkerParameter(KeyHandle: Longint; NodeID: Word; PositionMarkerEdgeType: Byte; PositionMarkerMode: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetPositionMarkerParameter@20';
    function VCS_GetPositionMarkerParameter(KeyHandle: Longint; NodeID: Word; var pPositionMarkerEdgeType: Byte; var pPositionMarkerMode: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPositionMarkerParameter@20';
    function VCS_ActivatePositionMarker(KeyHandle: Longint; NodeID: Word; DigitalInputNumber: Smallint; Polarity: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivatePositionMarker@20';
    function VCS_DeactivatePositionMarker(KeyHandle: Longint; NodeID: Word; DigitalInputNumber: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DeactivatePositionMarker@16';
    function VCS_ReadPositionMarkerCounter(KeyHandle: Longint; NodeID: Word; var pCount: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ReadPositionMarkerCounter@16';
    function VCS_ReadPositionMarkerCapturedPosition(KeyHandle: Longint; NodeID: Word; CounterIndex: Smallint; var pCapturedPosition: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ReadPositionMarkerCapturedPosition@20';
    function VCS_ResetPositionMarkerCounter(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ResetPositionMarkerCounter@12';

{Data Recorder}
  {Setup}
    function VCS_SetRecorderParameter(KeyHandle: Longint; NodeID: Word; SamplingPeriod: Smallint; NbOfPrecedingSamples: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetRecorderParameter@20';
    function VCS_GetRecorderParameter(KeyHandle: Longint; NodeID: Word; var pSamplingPeriod: Smallint; var pNbOfPrecedingSamples: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetRecorderParameter@20';
    function VCS_EnableTrigger(KeyHandle: Longint; NodeID: Word; TriggerType: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_EnableTrigger@16';
    function VCS_DisableAllTriggers(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DisableAllTriggers@12';
    function VCS_ActivateChannel(KeyHandle: Longint; NodeID: Word; ChannelNumber: Byte; ObjectIndex: Smallint; ObjectSubIndex: Byte; ObjectSize: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ActivateChannel@28';
    function VCS_DeactivateAllChannels(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DeactivateAllChannels@12';
